@@ -33,6 +33,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'version' => '1.0.0',
 	'constraints' => array(
 		'depends' => array(
+			'svconnector' => '1.1.0-0.0.0'
 		),
 		'conflicts' => array(
 		),
